--- a/templates/index.html
+++ b/templates/index.html
@@ -1,81 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <Title>My webpage</Title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <style type="text/css">
-        body {
-            background-image: url("AK.png");
-            background-attachment: fixed; 
-            background-position: top right;
-            background-repeat: no-repeat;
-            background-size:cover;
-            height: 100%;
-        }
-        /* html { 
-          background: url("C:\Users\Abdulkarim Ahmed\Desktop\AK.png") no-repeat center center fixed;
-          -webkit-background-size: cover;
-          -moz-background-size: cover;
-          -o-background-size: cover;
-          background-size: cover;
-        } */
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        td, th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
-          </style>
-
-</head>
-<body >
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Grapher</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-        </div>
-      </div>
-    </nav>
-    <diV>
+<! — “Child Template” →
+{% extends “base.html” %}
+ {% block body %}
       <form action="{{url_for('helloo')}}"  method="POST" enctype="multipart/form-data" style=" margin-left: 20%;">
         <input type="file" name="name" placeholder="Upload a csv file">
         <button>Submit</button>
       </form>
     </diV>
-    <table >
-      <tr>
-        {% for tablehead in tableheads %}
-          <th>
-              {{tablehead}}
-          </th>
-        {% endfor%}
-      </tr>
-      {%for value in values%}
-      <tr>
-        {%for val in value%}
-        <td>val</td>
+    <div style="overflow-x:auto;">
+      <table class="table">
+        <tr>
+          {% for tablehead in tableheads %}
+            <th scope="col">
+                {{tablehead}}
+            </th>
+          {% endfor%}
+        </tr>
+        {%for key,value in values.iterrows()%}
+        <tr>
+          {%for val in value%}
+          <td  >{{val}}</td>
+          {%endfor%}
+        </tr>
         {%endfor%}
-      </tr>
-      {%endfor%}
-      
-    </table>
-
+        
+      </table>
+      </div>
+      {% endblock %}
 
   
-
-
-</body>
-</html>
