--- a/templates/error.html
+++ b/templates/error.html
@@ -1,17 +1,5 @@
-<! — “Child Template” →
-{% extends “base.html” %}
- {% block body %}
- <div>
-   abg
-   <div>
-     asd
-     <div>
-       asf
-       
-     </div>
-   </div>
- </div>
- <div>
-   <h1>Error or sample page with search query</h1>
+{% extends "base.html" %}
+ {% block body %}       
+   <h1>Error or sample page with search query {{ error }}</h1>
   </div>
 {% endblock %}
